Fix buttons different height on wrap

--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -12,6 +12,7 @@
 .search-toggle-button-group {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  grid-auto-rows: 1fr;
 
   margin: 0.5rem;
   width: min(500px, 100%);
